# mara-ai

./: .env-example  .gitignore  README.md  docker-compose-balancer.yml  docker-compose-celery.yml  docker-compose-redis.yml  docker-compose.yml  prometheus.yml
backend/: .dockerignore  .env-example  Dockerfile  Dockerfile.aiogram  Dockerfile.celery  Dockerfile.flower  README.md  alembic.ini  entrypoint.sh  main.py  nginx.conf  pyproject.toml  redis.conf
backend/alembic/: env.py
backend/alembic/versions/: 141322db7875_add_telegram_monitored_chats_table.py  22054f80c94b_add_agents_cruds.py  2289da955512_fix_telegram_monitored_chats_structure.py  25363585b259_user_model.py  332dcbeeedc0_fix_aiogram.py  3feec49ab524_add_agents_models.py  580ad4f5a4ac_.py  623511a09f3a_add_agents.py  63b2e32b0bb5_change_base_models.py  79e78b83ff1c_add_user_id_to_agent_logs.py  7ab0e40003a4_add_subscription_and_plan_models.py  8bc1e50004b5_add_wallet_models.py  8c6847c88ef4_add_telegram_monitored_chats_table.py  add_telegram_configs.py  add_user_id_to_documents.py  b0df5dda50cc_add_wallets.py  cf87f9f50663_add_new_tables.py  telegram_configs_manual.py
backend/src/: __init__.py
backend/src/account/models/: __init__.py  plan.py  subscription.py  user.py  wallet.py
backend/src/account/repositories/: __init__.py  plan.py  subscription.py  user.py  wallet.py
backend/src/account/routers/: __init__.py  admin.py  plan.py  subscription.py  tasks.py  user.py  wallet.py
backend/src/account/schemas/: __init__.py  plan.py  subscription.py  user.py  wallet.py
backend/src/account/services/: __init__.py  aptos_integration.py  arbitrum_integration.py  ethereum_integration.py  plan.py  subscription.py  user.py  wallet.py  wallet_generator.py
backend/src/agents/: __init__.py
backend/src/agents/models/: __init__.py  agent.py  agent_log.py  document.py  telegram_config.py  telegram_monitored_chat.py  user_agent.py
backend/src/agents/repositories/: __init__.py  agent.py  document.py  telegram_config.py  telegram_monitored_chat.py  user_agent.py
backend/src/agents/routers/: __init__.py  agent.py  aiogram_bot_management.py  analysis.py  document.py  metrics.py  telegram_config.py  telegram_monitoring.py  user_agents.py
backend/src/agents/schemas/: __init__.py  agent.py  agent_log.py  analysis.py  document.py  telegram_config.py  telegram_monitored_chat.py  user_agent.py
backend/src/agents/services/: __init__.py  agent_service.py  document_processor.py  metrics_service.py  ollama_service.py  telegram_service.py  vector_store.py
backend/src/agents/utils/: __init__.py  file_handlers.py
backend/src/aiogram_bot/: __init__.py  main.py
backend/src/auth/: dependencies.py
backend/src/auth/routers/: auth.py
backend/src/auth/schemas/: __init__.py  auth.py
backend/src/auth/services/: auth.py
backend/src/core/: auth.py  celery_app.py  config.py  dependencies.py  routers.py  wallet_config.py
backend/src/core/middlewares/: __init__.py  prometheus.py
backend/src/core/orm/: base.py  database.py
backend/src/tasks/: arbitrum_tasks.py  celery_tasks.py  document_tasks.py  subscription_tasks.py  telegram_alert_tasks.py  wallet_monitor.py
backend/src/user/routers/: __init__.py  test.py
backend/tests/: conftest.py  constants.py
backend/tests/api/account/: test_role.py  test_user.py
backend/tests/fixtures/: async_session.py  client.py  database.py  user.py
(+36 files in other folders)
