[project]
name = "mara-ai"
version = "0.1.0"
description = "Monitoring & Assistance Reactive Agent"
authors = [
    {name = "mp4treiser",email = "mp4treiser@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests (>=2.32.4,<3.0.0)",
    "alembic (>=1.16.4,<2.0.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "celery (>=5.5.3,<6.0.0)",
    "huggingface (>=0.0.1,<0.0.2)",
    "transformers (>=4.53.3,<5.0.0)",
    "smolagents (>=1.20.0,<2.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "pydantic[email] (>=2.11.7,<3.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "PyJWT (>=2.8.0,<3.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "python-multipart (>=0.0.6,<0.1.0)",
    "email-validator (>=2.0.0,<3.0.0)",
    "bcrypt (==4.0.1)",
    "prometheus-client (>=0.22.1,<3.0.0)",
    "redis (>=6.4.0,<7.0.0)",
    "flower (>=2.0.1,<3.0.0)",
    "cryptography (>=45.0.6,<46.0.0)",
    "aiohttp (>=3.9.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
